--- a/ONG/templates/base.html
+++ b/ONG/templates/base.html
@@ -41,6 +41,9 @@
                     <li><a class="dropdown-item" href="#">Acerca de Nosotros</a></li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'datos' %}">----CRUD ACA---- </a>
+              </li>
             </ul>
           </div>
         </div>
