--- a/ONG/templates/contacto.html
+++ b/ONG/templates/contacto.html
@@ -1,42 +1,62 @@
 {% extends "./base.html" %}
 
-{% block title %} Pagina Principal {% endblock %}
+{% block title %} Formulario de Contacto {% endblock %}
 
 {% block body %}
-<div class="row">
-    <div class="container form">
-            <form action="respuesta.html" method="get" class="form-contacto" >
-                <fieldset>
-                    <legend class="text-center header">Formulario Contacto</legend>
-          
-                    <div class="mb-2">
-                        <input class="form-control" id="nombre" type="text" placeholder="Nombre" required/>
-                    </div>
-
-                    <div class="mb-2">
-                        <input class="form-control" id="correo" type="email" placeholder="Correo Electrónico" required/>
-                    </div>
-
-                    <div class="mb-2">
-                        <input class="form-control" id="telefono" type="number" placeholder="Número de Teléfono" required/>
-                    </div>
-                    
-                    <div class="mb-2">
-                        <input class="form-control" id="direccion" type="text" placeholder="Dirección" required/>
-                    </div>    
-             
-                    <div class="mb-2">
-                        <textarea class="form-control" id="mensaje" type="text" placeholder="Introduzca su masaje para nosotros aquí. Nos pondremos en contacto con usted"  rows="5"  required></textarea>
-                    </div>
+{% load static %}
+<div class="container">
+    <div class="form">
+        <form action="{% static 'datos.html' %}" method="POST" class="form-contacto" >
+            {% csrf_token %}
+            <fieldset>
+                <legend class="text-center header">Formulario Contacto</legend>
+      
+                <div class="mb-2">
+                    <input class="form-control" id="nombre" type="text" placeholder="Nombre" required/>
+                </div>
+         
+                <div class="mb-2">
+                    <input class="form-control" id="correo" type="email" placeholder="Correo Electrónico" required/>
+                </div>
     
-                    <div class="mb-3 d-grid">
-                        <!-- <button class="btn btn-primary btn-lg" type="submit">Enviar</button> -->
-                        <button class="btn btn-primary btn-lg" type="button" onclick="valForm()">Enviar</button>
-                    </div>
-
-
-                </fieldset>
-            </form>
+                <div class="mb-2">
+                    <input class="form-control" id="telefono" type="number" placeholder="Número de Teléfono" required/>
+                </div>
+                
+                <div class="mb-2">
+                    <input class="form-control" id="direccion" type="text" placeholder="Dirección" required/>
+                </div>
+    
+                <div class="mb-2">
+                    <textarea class="form-control" id="mensaje" type="text" placeholder="Háblanos sobre ti, y por qué quieres adoptar una mascota ;)"  rows="5"  required></textarea>
+                </div>
+                
+                <div class="mb-3 d-grid">
+                    <button class="btn btn-primary btn-lg bordes" type="button" onclick="valForm()">Enviar</button>
+                    <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
+                    <input type="reset" class="btn btn-primary" id="limpiar" value="Borrar Todo">
+                </div>
+            </fieldset>
+        </form>
     </div>
+    
 </div>
 {% endblock %}
+
+
+<!-- <div class="container">
+    <div class="row">
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div>
+                {{ form.as_p}}
+            </div> 
+            <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
+            <input type="reset" class="btn btn-primary" id="limpiar" value="Borrar Todo">
+            <div id="error" class="aler aler-danger" role="alert"></div>
+        </form>
+        <div class="alert alert-success" role="alert">
+            {{mensaje}}
+        </div>
+    </div>
+</div> -->
