--- a/ONG/static/css/estilos.css
+++ b/ONG/static/css/estilos.css
@@ -7,3 +7,132 @@
 .carousel-inner {
   max-height:39rem !important;
 }
+
+.bordes {
+  background-color: brown;
+}
+
+.barnav {
+  padding-left: 70px;
+}
+
+.tamCarousel {
+  height: 70vh;
+}
+
+.carousel-inner .tamFigure {
+  height: 70vh;
+}
+
+.jefe {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 10px;
+  min-width: 100vh;
+}
+
+a {
+  text-decoration: none
+}
+
+a:visited {
+  text-decoration: none
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px;
+  padding: 10px;
+}
+
+.grid-container>div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.hijo {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+  min-width: 75vh;
+  background-color: brown;
+}
+
+.hijo>div>ul>li {
+  list-style: none;
+}
+
+body {
+  background-color: bisque;
+  min-height: 100vh;
+  flex-direction: column;
+  display: flex;
+}
+
+.nav-text {
+  color: darkslateblue;
+}
+
+.volver {
+  padding-right: 100px;
+}
+
+.volver-boton {
+  background-color: brown;
+  border: none;
+  color: white;
+  padding: 5px 16px;
+  text-align: center;
+  display: flex;
+  font-size: 16px;
+}
+
+.car-color {
+  text-shadow: 2px 2px 5px red;
+  color: white;
+}
+
+footer {
+  background-color: #777;
+  padding: 5px;
+  text-align: center;
+  color: white;
+  margin-top: auto;
+}
+
+.img-pet {
+  width: 300px;
+  height: 250px;
+}
+
+.img-rar {
+  align-items: center;
+}
+
+.titulos {
+  background-color: brown;
+  min-width: 100vw;
+  padding: 0;
+}
+
+.img-pet2 {
+  width: 300px;
+  height: 250px;
+}
+
+.list-item{
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: green;
+}
+
+.ul{
+  text-align: center;
+
+
+}
