--- a/ONG/templates/register.html
+++ b/ONG/templates/register.html
@@ -4,7 +4,7 @@
        
 
 <div class="container py-5">
-	<h1>Register</h1>
+	<h1>Registrar Cuenta</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ register_form.as_p }}                    
