--- a/ONG/templates/base.html
+++ b/ONG/templates/base.html
@@ -63,7 +63,6 @@
       </div>
     </div>
   </nav>
-
   <!-- CONTENEDOR DE PAGINAS -->
   <div class="container py-4">
     {% block body %}
@@ -75,18 +74,18 @@
   <div class="row align-items-center justify-content-center flex-wrap">
     <footer>
       <p class="fs-5 px-3  pt-3">ExpertD. &copy; Todos Los Derechos Reservados 2023</p>
+      <p class="fs-5 px-3  pt-3" id='horario'></p>
     </footer>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
   </script>
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/api.js' %}"></script>
 </body>
 
 </html>
